<resources>
    <string name="app_name">Movie DB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Detail</string>
    <string name="original_title">Original Title</string>
    <string name="original_language">Original Language</string>
    <string name="popularity">Popularity</string>
    <string name="adult">Adult</string>
    <string name="overview">Overview</string>
    <string name="ade_resie_muchorobbi_setiawan">Ade Resie Muchorobbi Setiawan</string>
    <string name="d3rpla_42_02">D3RPLA - 42 - 02</string>
    <string name="telkom_university">Telkom University</string>
</resources>
